The pipeline is finished !

--- a/model_exploration.ipynb
+++ b/model_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +196,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'classifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb Cell 13'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bruche.mesocentre.universite-paris-saclay.fr/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb#ch0000011vscode-remote?line=0'>1</a>\u001b[0m detector \u001b[39m=\u001b[39m Detector(classifier)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bruche.mesocentre.universite-paris-saclay.fr/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb#ch0000011vscode-remote?line=1'>2</a>\u001b[0m test_dir \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mdata/test\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bruche.mesocentre.universite-paris-saclay.fr/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb#ch0000011vscode-remote?line=2'>3</a>\u001b[0m test_images \u001b[39m=\u001b[39m [os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(test_dir, filename) \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(test_dir)]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'classifier' is not defined"
+     ]
+    }
+   ],
    "source": [
     "detector = Detector(classifier)\n",
     "test_dir = \"data/test\"\n",
     "test_images = [os.path.join(test_dir, filename) for filename in os.listdir(test_dir)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_images' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb Cell 14'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bruche.mesocentre.universite-paris-saclay.fr/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb#ch0000026vscode-remote?line=0'>1</a>\u001b[0m image_index \u001b[39m=\u001b[39m \u001b[39m40\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bruche.mesocentre.universite-paris-saclay.fr/gpfs/users/prevotb/misc/car-detection/model_exploration.ipynb#ch0000026vscode-remote?line=1'>2</a>\u001b[0m image \u001b[39m=\u001b[39m imread(test_images[image_index])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_images' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "image_index = 40\n",
+    "image = imread(test_images[image_index])"
    ]
   },
   {
@@ -233,9 +267,6 @@
     }
    ],
    "source": [
-    "image_index = 40\n",
-    "image = imread(test_images[image_index])\n",
-    "\n",
     "detections, decisions = detector.detect(\n",
     "    image, \n",
     "    10, \n",
@@ -252,24 +283,6 @@
     "        .5\n",
     "    ])\n",
     "print(len(detections))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "less_detections = detector.nms(detections, .5)\n",
-    "print(len(less_detections))"
    ]
   },
   {
@@ -484,33 +497,43 @@
    "source": [
     "from ipywidgets import interact, widgets\n",
     "from scripts.display_utils import show_image_with_bbs\n",
-    "import pickle\n"
+    "import pickle\n",
+    "import numpy as np\n",
+    "from scripts.hog.detector import Detector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"results/hog/last_chance_results.pkl\", \"rb\") as pickle_file:\n",
-    "    test_results = pickle.load(pickle_file)"
+    "with open(\"results/hog/linear_results.pkl\", \"rb\") as pickle_file:\n",
+    "    results = pickle.load(pickle_file)\n",
+    "\n",
+    "\n",
+    "all_filenames, all_detections, all_confidences = [None]*len(results), [None]*len(results), [None]*len(results)\n",
+    "for fname, _, detections, confidences in results:\n",
+    "    idx = int(fname.split(\".\")[0]) - 1\n",
+    "    all_filenames[idx] = fname\n",
+    "    all_detections[idx] = detections\n",
+    "    all_confidences[idx] = confidences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8d6767b35f94b9c9596fe8e378a138a",
+       "model_id": "2e118955bb754de2b5514a1ec188a986",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='index', max=202), Output()), _dom_classes=('widget-inter…"
+       "interactive(children=(IntSlider(value=63, description='index', max=201), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
@@ -522,16 +545,59 @@
        "<function __main__.f_display(index)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "detector = Detector(None, nms_mode=\"confidence\")\n",
     "def f_display(index):\n",
-    "    show_image_with_bbs(os.path.join(\"data/test\", test_results[index][0]), test_results[index][1])\n",
+    "    detections = all_detections[index]\n",
+    "    confidences = all_confidences[index]\n",
+    "    best_idx = np.array(confidences) > .2\n",
+    "    best_detections = np.array(detections)[best_idx]\n",
+    "    # best_confidences = [f\"{score:.3f}\" for score in np.array(confidences)[best_idx]]\n",
+    "    best_detections = detector.nms(best_detections, .5, \"min\", np.array(confidences)[best_idx])\n",
+    "    show_image_with_bbs(os.path.join(\"data/test\", all_filenames[index]), best_detections)\n",
     "\n",
-    "interact(f_display, index=widgets.IntSlider(min=0, max=len(test_results), step=1, value=0))"
+    "interact(f_display, index=widgets.IntSlider(min=0, max=len(all_filenames)-1, step=1, value=63))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "boolean index did not match indexed array along dimension 0; dimension is 26 but corresponding boolean dimension is 33",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [22]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m detections \u001b[39m=\u001b[39m [det \u001b[39mfor\u001b[39;00m det \u001b[39min\u001b[39;00m detections \u001b[39mif\u001b[39;00m det[\u001b[39m1\u001b[39m] \u001b[39m>\u001b[39m \u001b[39m100\u001b[39m \u001b[39mand\u001b[39;00m det[\u001b[39m1\u001b[39m]\u001b[39m+\u001b[39mdet[\u001b[39m3\u001b[39m] \u001b[39m<\u001b[39m \u001b[39m500\u001b[39m]\n\u001b[1;32m      7\u001b[0m best_idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(confidences) \u001b[39m>\u001b[39m \u001b[39m.2\u001b[39m\n\u001b[0;32m----> 8\u001b[0m best_detections \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(detections)[best_idx]\n\u001b[1;32m      9\u001b[0m best_detections \u001b[39m=\u001b[39m detector\u001b[39m.\u001b[39mnms(best_detections, \u001b[39m.5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmin\u001b[39m\u001b[39m\"\u001b[39m, np\u001b[39m.\u001b[39marray(confidences)[best_idx])\n\u001b[1;32m     10\u001b[0m rle \u001b[39m=\u001b[39m run_length_encoding(bounding_boxes_to_mask(best_detections, \u001b[39m720\u001b[39m, \u001b[39m1280\u001b[39m))\n",
+      "\u001b[0;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 0; dimension is 26 but corresponding boolean dimension is 33"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts.utils import run_length_encoding, bounding_boxes_to_mask\n",
+    "import csv\n",
+    "\n",
+    "rows = []\n",
+    "for file_name, _, detections, confidences in results:\n",
+    "    correct = [i for i in range(len(detections)) if detections[i][1] > 100 and detections[i][1]+detections[i][3] < 500]\n",
+    "    detections = [det for det in detections if det[1] > 100 and det[1]+det[3] < 500]\n",
+    "    best_idx = np.array(confidences) > .2\n",
+    "    best_detections = np.array(detections)[best_idx]\n",
+    "    best_detections = detector.nms(best_detections, .5, \"min\", np.array(confidences)[best_idx])\n",
+    "    rle = run_length_encoding(bounding_boxes_to_mask(best_detections, 720, 1280))\n",
+    "    rows.append(['test/' + file_name, rle])\n",
+    "\n",
+    "with open(\"results/hognot_the_worst.csv\", \"w\") as dest_file:\n",
+    "    writer = csv.writer(dest_file)\n",
+    "    writer.writerows(rows)"
    ]
   }
  ],
@@ -554,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
